fix alignment of iiif and rdf icons when window is resized

--- a/app/assets/sass/dri/_dri.scss
+++ b/app/assets/sass/dri/_dri.scss
@@ -1908,7 +1908,6 @@ p.dri_rss_link a {
            text-decoration: none;
            padding:0;
            margin:0;
-           width: 250px;
       }
     }
 }
