--- a/app/assets/sass/dri/modules/_dri_sidenav.scss
+++ b/app/assets/sass/dri/modules/_dri_sidenav.scss
@@ -40,22 +40,19 @@
             padding:5px 0 5px 0;
             border-bottom: 1px solid $dri_thingrey;
             list-style-type: none;
-              font-size: 100%;
+            font-size: 100%;
           }
         li.dri_share {
           margin-top: 15px;
           margin-bottom: 15px;
-          float: right;
           border:none;
         }
         li.dri_formats {
           padding:5px 0 5px 0;
-          float: right;
           border:none;
         }
         li.dri_formats_spacing {
           margin-bottom: 15px;
-          float: right;
           border:none;
         }
         li.dri_disabled {
